fix inputs dark mode profile

--- a/client/src/components/Profile/profile.module.css
+++ b/client/src/components/Profile/profile.module.css
@@ -160,18 +160,11 @@
 }
 
 /* -----------------------------------------------------Dark Mode ----------------------------------------------------------------- */
-.mainContainer {
-  background-color: #2A2A2B;
-  height: 100%;
-  width: 100%;
-}
-
 .profileContainerDark {
   background-image: url(../../utils/ProfileDark.png);
   background-repeat:repeat-y;
   height: 100vh;
   width: 100%;
-  background-color: #FFB800;
   /* background-position-y: 184px;
   padding-bottom: 40px; */
 }
